# webidl2wit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: cargo-vet.yml  prep-release.yaml  release.yaml  rust.yml  tag-release.yml
crates/webidl2wit/: CHANGELOG.md  Cargo.toml  cliff.toml
crates/webidl2wit-cli/: Cargo.toml  cliff.toml
crates/webidl2wit-cli/src/: main.rs  style.rs
crates/webidl2wit-cli/tests/: e2e.rs
crates/webidl2wit-cli/tests/fixtures/: book-store.webidl
crates/webidl2wit/src/: borrow_params.rs  custom_resources.rs  lib.rs  translations.rs  types_.rs
crates/webidl2wit/tests/: smoke.rs
crates/webidl2wit/tests/inputs/: borrow-params.idl  borrow-params.wit  borrow.idl  borrow.wit  console.wit  custom-resources.idl  enum.idl  html-element.idl  html-element.wit  inheritance.idl  inheritance.wit  option.idl  option.wit  order.wit  overloading.idl  pollable.wit  record.idl  record.wit  resource.wit  type.idl  type.wit  unsupported.idl  unsupported.wit  webgpu.idl  webgpu.wit  window.idl  window.wit
src/: custom_resources.rs  lib.rs  main.rs  translations.rs  types_.rs  web.idl
src/to_wit/: mod.rs
src/translations/: mod.rs  types_.rs
supply-chain/: audits.toml  config.toml
tests/: smoke.rs
tests-input/: enum.wit  record.wit  resource.idl  resource.wit  type.wit  webgpu.idl  webgpu.wit
tests/inputs/: borrow.wit  console.idl  console.wit  custom-resources.idl  custom-resources.wit  enum.idl  enum.wit  html-element.wit  inheritance.idl  inheritance.wit  order.idl  order.wit  overloading.idl  overloading.wit  record.wit  resource.idl  resource.wit  type.idl  type.wit  unsupported.idl  unsupported.wit  webgpu.idl  webgpu.wit  window.idl  window.wit
