[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
description = "Convert WebIDL to wit"
repository = "https://github.com/wasi-gfx/webidl2wit"

[workspace.dependencies]
anstyle = { version = "1", default-features = false }
anyhow = { version = "1", default-features = false }
clap = { version = "4.5", default-features = false }
hashlink = { version = "0.9.1", default-features = false }
heck = { version = "0.5", default-features = false }
itertools = { version = "0.13", default-features = false }
similar-asserts = "1.7"
semver = { version = "1", default-features = false }
weedle = { version = "0.13.0", default-features = false }
wit-encoder = { version = "0.229.0", default-features = false }
wit-parser = { version = "0.229.0", default-features = false }

webidl2wit = { version = "^0.1.0", path = "./crates/webidl2wit", default-features = false }

