[package]
name = "webidl2wit-cli"
version = "0.0.1"
description = """
CLI that enables easy use of webidl2wit (converting WebIDL to WebAssembly Interface Types)
"""

edition.workspace = true

[[bin]]
name = "webidl2wit"
path = "src/main.rs"

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = [ "default", "derive" ] }
semver = { workspace = true }
webidl2wit = { workspace = true }
weedle = { workspace = true }
